# nex

./: .gitattributes  .gitignore  .goreleaser.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  event.go  go.mod  go.sum  handlers.go  heartbeat.go  main.go  node.go  node_test.go  options.go  options_test.go
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
_install/: install.sh
_otel/: docker-compose.yml
_scripts/: install.sh
_spec/: go.mod  go.sum  monitor_test.go  node_test.go  node_windows.go  spec_suite_test.go
_test/: helpers.go  run_test.go
adr/: adr-1.md  index.md
agent/: README.md  agent.go  agent_linux.go  agent_notlinux.go  events.go  logger.go  metadata.go  nats.go  nex-agent.go  runner.go  runner_test.go
agent-api/: README.md  agent.pb.go  agent.proto  agent_grpc.pb.go  asyncapi.yaml  client.go  events.go  events.pb.go  events.proto  register-agent-request.json  start-workload-request.json  stop-workload-request.json  types.go  utils.go
agents/: go.mod  go.sum
api/: agent-ping-response.json  client.go  client_test.go  clone-workload-request.json  heartbeat-agent.json  lameduck-request.json  (+10 more)
api/agent/rust/: Cargo.toml  build.rs
api/agent/rust/src/: lib.rs
api/agent/rust/src/codegen/: mod.rs
workload_runners/wasm/: Cargo.toml  README.md
workload_runners/wasm/src/: lib.rs  metadata.rs  runner.rs
workload_runners/wasm/src/host_services/: mod.rs
workload_runners/wasm/src/host_services/builtins/: keyvalue.rs  mod.rs  objectstore.rs
workload_runners/wasm/wit/: world.wit
(+880 files in other folders)
