[package]
name = "nex-agentapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
uuid = {version = "1.10.0", features = ["serde"] }

[build-dependencies]
typify = "0.1.0"
syn = "2.0.77"
serde_json = "1.0.128"
schemars = "0.8.21"
prettyplease = "0.2.22"